--- a/eureka-client-one/pom.xml
+++ b/eureka-client-one/pom.xml
@@ -9,7 +9,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>eurake-client-one</artifactId>
+    <artifactId>eureka-client-one</artifactId>
 
     <dependencies>
         <dependency>
