--- a/eureka-register/pom.xml
+++ b/eureka-register/pom.xml
@@ -9,7 +9,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>eurake-register</artifactId>
+    <artifactId>eureka-register</artifactId>
 
     <dependencies>
         <dependency>
